--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="gwzDwsZ3IRa_qZpk0IKqfARfFAxrY-eMW-5FNmZv8zU" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="caravellemarkets.com is an unlicensed scam broker that defrauds novice traders. Read the full caravellemarkets.com scam review and avoid losing your money.">
